# tinygpt

./: .gitignore  README.md  pyproject.toml  teacher
a_pretrain/: README.md  dataset.py  main.py  train.py
a_pretrain/inference/: generation.py  main.py
a_pretrain/model/: model.py
a_pretrain/tokenizer/: design.md  main.py
